--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <input class="search" type="search" placeholder="enter your name">
         <input class="submit" type="submit">
     </div>
+    <p id="arrayList"> </p>
     <div class="rsp">
     <p id="result"></p>
 
